Add git:undo and git:log scripts

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "git:undo": "git stash -u && git stash drop",
+    "git:log": "git log --oneline --abbrev-commit --all --graph --decorate --color"
   },
   "dependencies": {
     "react": "",
