--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "test": "vitest",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "git:undo": "git stash -u && git stash drop",
@@ -15,15 +16,20 @@
     "react-dom": ""
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "",
+    "@testing-library/react": "",
+    "@testing-library/user-event": "",
     "@types/react": "",
     "@types/react-dom": "",
     "@vitejs/plugin-react": "",
     "eslint": "",
-    "prettier": "",
     "eslint-config-prettier": "",
     "eslint-plugin-react": "",
     "eslint-plugin-react-hooks": "",
     "eslint-plugin-react-refresh": "",
-    "vite": ""
+    "jsdom": "",
+    "prettier": "",
+    "vite": "",
+    "vitest": ""
   }
 }
