Add react-router-dom to package.json

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "react": "",
-    "react-dom": ""
+    "react-dom": "",
+    "react-router-dom": ""
   },
   "devDependencies": {
     "@testing-library/jest-dom": "",
