--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "vite build",
     "test": "vitest",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,}\"",
     "preview": "vite preview",
     "git:undo": "git stash -u && git stash drop",
     "git:log": "git log --oneline --abbrev-commit --all --graph --decorate --color"
@@ -26,11 +27,15 @@
     "@vitejs/plugin-react": "",
     "eslint": "",
     "eslint-config-prettier": "",
+    "eslint-plugin-prettier": "",
     "eslint-plugin-react": "",
     "eslint-plugin-react-hooks": "",
     "eslint-plugin-react-refresh": "",
     "jsdom": "",
     "prettier": "",
+    "typescript": "",
+    "@typescript-eslint/parser": "",
+    "@typescript-eslint/eslint-plugin": "",
     "vite": "",
     "vitest": ""
   }
